Visual and functional tweaks: - Removed custom view dialog because we are not going to use it anymore - Fixed text overflow when view names are very long - Simplified dashboard filter styles - Added hover style for filter preview. Simplified styles object.

--- a/app/js/components/filter_preview/filter_preview.scss
+++ b/app/js/components/filter_preview/filter_preview.scss
@@ -5,6 +5,10 @@ $margin-bottom: 40px;
 .filter-preview {
   &:hover {
     cursor: pointer;
+
+    .filter-preview__title {
+      color: $dark-sky-blue;
+    }
   }
 
   &__title {
